sequences using a moving histogram in combination with pcond, and
converting frames to TIFF.

Eliminated SPEED macro from makeall and source tree.

Added -pj option to vwrays to allow jittering of sample locations.

Fixed bug in rtcontrib where it occasionally missed writing the
final bin file.  (Pretty serious, actually.)

Added -Dfseeko=fseek to MACH= line for linux, as fseeko(3) seems to be
broken in current versions of Linux.  (Need to remove this later.)

Rearranged struct's for better efficiency on 64-bit architectures.

Added -i option to rlam so it works with binary input formats.

Added rtcontrib -bn option to specify number of bins and fixed bug
in recovery of files containing multiple values per record.

Added rtcontrib -fo option to write over existing files, which it now
refuses to do without this option.

Made rtcontrib flush output when handed a zero-length ray vector,
to match behavior of rtrace.

Improved color scale for falsecolor output.

Added threshold test for Fresnel approximation to prevent its use
on smooth surfaces with unrealistically low specularities (less than 1.8%).
Water has a specular reflectance of 2.1% at room temperture.

Removed NICE macro settings in rpict and rtrace, which was slowing down
the processes under Mac OS X (10.4) by about 60% due to processor napping.

Made xform, replmarks and rad2mgf handle quoted modifiers and names properly.

Fixed problem in genblinds, where it was generating slats that were too
wide with the +/-r option.  (Thanks to Helena Buelow-Huebe for discovering
this bug.)

Fixed bug in ra_ppm for 16-bit/sample i/o, where it was getting the byte
order wrong (apparently).

Added -V option to rtcontrib to report actual contributions, rather than
just ray coefficients.

Fixed bug in ranimate that caused it to fail in continuation of renderings.

Renamed librt.a to librtrad.a, to avoid conflict on Solaris. Almost
everything now gets linked to -lrtrad instead of -lrt.
